Add basic structure

--- a/src/UI/Views/MainView.axaml
+++ b/src/UI/Views/MainView.axaml
@@ -2,6 +2,8 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:vm="clr-namespace:PlcMonitor.UI.ViewModels.Explorer"
+        xmlns:views="clr-namespace:PlcMonitor.UI.Views"
         mc:Ignorable="d" d:DesignWidth="1350" d:DesignHeight="700"
         x:Class="PlcMonitor.UI.Views.MainView"
         FontSize="14"
@@ -9,7 +11,7 @@
 
     <Panel>
         <DockPanel HorizontalAlignment="Stretch">
-            <ExperimentalAcrylicBorder DockPanel.Dock="Left" Width="240">
+            <ExperimentalAcrylicBorder DockPanel.Dock="Left" Width="240" IsHitTestVisible="False">
                 <ExperimentalAcrylicBorder.Material>
                     <ExperimentalAcrylicMaterial TintColor="Black" MaterialOpacity="0.85" TintOpacity="1" />
                 </ExperimentalAcrylicBorder.Material>
@@ -20,21 +22,30 @@
                 <ExperimentalAcrylicBorder.Material>
                     <ExperimentalAcrylicMaterial TintColor="#222222" MaterialOpacity="0.85" TintOpacity="1" />
                 </ExperimentalAcrylicBorder.Material>
-                <TextBlock Text="{Binding #TabControl.SelectedItem.Header}" Margin="40 20" FontSize="32" FontWeight="Light" />
+                <TextBlock Text="{Binding #TabControl.SelectedItem.Name}" Margin="40 20" FontSize="32" FontWeight="Light" />
             </ExperimentalAcrylicBorder>
         </DockPanel>
 
-        <TabControl x:Name="TabControl" Classes="sidebar" Margin="0 40 0 20">
+        <TabControl x:Name="TabControl" Classes="sidebar" Margin="0 40 0 20" Items="{Binding Nodes}" Padding="20">
+            <TabControl.ItemTemplate>
+                <DataTemplate>
+                    <TextBlock Text="{Binding Name}" />
+                </DataTemplate>
+            </TabControl.ItemTemplate>
+            <TabControl.DataTemplates>
+                <DataTemplate DataType="{x:Type vm:OverviewNode}">
+                    <TextBlock>Overview</TextBlock>
+                </DataTemplate>
+                <DataTemplate DataType="{x:Type vm:AddConnectionNode}">
+                    <views:AddConnectionView />
+                </DataTemplate>
+                <DataTemplate DataType="{x:Type vm:PlcConnectionNode}">
+                    <views:PlcConnectionView />
+                </DataTemplate>
+            </TabControl.DataTemplates>
             <TabControl.Styles>
                 <StyleInclude Source="/Styles/SideBar.axaml" />
             </TabControl.Styles>
-
-            <TabItem Header="Overview">
-                <TextBlock>Overview</TextBlock>
-            </TabItem>
-            <TabItem Header="PLC 1">
-
-            </TabItem>
         </TabControl>
     </Panel>
 </UserControl>
