--- a/src/UI/Views/AddConnectionView.axaml
+++ b/src/UI/Views/AddConnectionView.axaml
@@ -6,6 +6,22 @@
         mc:Ignorable="d" d:DesignWidth="1350" d:DesignHeight="700"
         x:Class="PlcMonitor.UI.Views.AddConnectionView">
 
-    <Button Command="{Binding AddCommand}">Add PLC</Button>
+    <StackPanel>
+        <Grid RowDefinitions="auto,auto,auto,auto" ColumnDefinitions="200,200">
+            <Label Grid.Row="0" Grid.Column="0" Target="PlcName">Name</Label>
+            <TextBox Name="PlcName" Grid.Row="0" Grid.Column="1" Text="{Binding PlcName}" />
+
+            <Label Grid.Row="1" Grid.Column="0" Target="Host">Host</Label>
+            <TextBox Name="Host" Grid.Row="1" Grid.Column="1" Text="{Binding Host}" />
+
+            <Label Grid.Row="2" Grid.Column="0" Target="LocalTsap">Local TSAP</Label>
+            <TextBox Name="LocalTsap" Grid.Row="2" Grid.Column="1" Text="{Binding LocalTsap}" Watermark="A3:01" />
+
+            <Label Grid.Row="3" Grid.Column="0" Target="RemoteTsap">Remote TSAP</Label>
+            <TextBox Name="RemoteTsap" Grid.Row="3" Grid.Column="1" Text="{Binding RemoteTsap}" Watermark="A3:01" />
+        </Grid>
+
+        <Button Command="{Binding AddCommand}">Add PLC</Button>
+    </StackPanel>
 
 </UserControl>
