PlcView: Allow editing of Address

--- a/src/UI/Views/PlcView.axaml
+++ b/src/UI/Views/PlcView.axaml
@@ -13,7 +13,8 @@
             <DataGrid.Columns>
                 <DataGridTextColumn Header="Address"
                                     Binding="{Binding Address}"
-                                    Width="auto" />
+                                    Width="auto"
+                                    IsReadOnly="False" />
                 <DataGridTextColumn Header="Length"
                                     Binding="{Binding Length}"
                                     Width="auto" />
