--- a/src/UI/Views/MainView.axaml
+++ b/src/UI/Views/MainView.axaml
@@ -26,10 +26,15 @@
             </ExperimentalAcrylicBorder>
         </DockPanel>
 
-        <StackPanel Orientation="Horizontal" VerticalAlignment="Top">
-            <Button Command="{Binding SaveCommand}">Save</Button>
-            <Button Command="{Binding LoadCommand}">Load</Button>
-        </StackPanel>
+        <DockPanel HorizontalAlignment="Stretch" VerticalAlignment="Top">
+            <Menu DockPanel.Dock="Left">
+                <MenuItem Header="_File">
+                    <MenuItem Header="_Open..." Command="{Binding LoadCommand}" />
+                    <MenuItem Header="_Save" Command="{Binding SaveCommand}" />
+                    <MenuItem Header="Save as..." Command="{Binding SaveAsCommand}" />
+                </MenuItem>
+            </Menu>
+        </DockPanel>
 
         <ContentControl Content="{Binding Project}" />
     </Panel>
