Add hotkeys to menu entries

--- a/src/UI/Views/MainView.axaml
+++ b/src/UI/Views/MainView.axaml
@@ -29,9 +29,9 @@
         <DockPanel HorizontalAlignment="Stretch" VerticalAlignment="Top">
             <Menu DockPanel.Dock="Left">
                 <MenuItem Header="_File">
-                    <MenuItem Header="_Open..." Command="{Binding LoadCommand}" />
-                    <MenuItem Header="_Save" Command="{Binding SaveCommand}" />
-                    <MenuItem Header="Save as..." Command="{Binding SaveAsCommand}" />
+                    <MenuItem Header="_Open..." InputGesture="Ctrl+O" HotKey="Ctrl+O" Command="{Binding LoadCommand}" />
+                    <MenuItem Header="_Save" InputGesture="Ctrl+S" HotKey="Ctrl+S" Command="{Binding SaveCommand}" />
+                    <MenuItem Header="Save as..." InputGesture="Ctrl+Shift+S" HotKey="Ctrl+Shift+S" Command="{Binding SaveAsCommand}" />
                 </MenuItem>
             </Menu>
 
