Main: Rename Load to Open

--- a/src/UI/Views/MainView.axaml
+++ b/src/UI/Views/MainView.axaml
@@ -29,7 +29,7 @@
         <DockPanel HorizontalAlignment="Stretch" VerticalAlignment="Top">
             <Menu DockPanel.Dock="Left">
                 <MenuItem Header="_File">
-                    <MenuItem Header="_Open..." InputGesture="Ctrl+O" HotKey="Ctrl+O" Command="{Binding LoadCommand}" />
+                    <MenuItem Header="_Open..." InputGesture="Ctrl+O" HotKey="Ctrl+O" Command="{Binding OpenCommand}" />
                     <MenuItem Header="_Save" InputGesture="Ctrl+S" HotKey="Ctrl+S" Command="{Binding SaveCommand}" />
                     <MenuItem Header="Save _As..." InputGesture="Ctrl+Shift+S" HotKey="Ctrl+Shift+S" Command="{Binding SaveAsCommand}" />
                 </MenuItem>
