Add 'New' menu option

--- a/src/UI/Views/MainView.axaml
+++ b/src/UI/Views/MainView.axaml
@@ -29,9 +29,14 @@
         <DockPanel HorizontalAlignment="Stretch" VerticalAlignment="Top">
             <Menu DockPanel.Dock="Left">
                 <MenuItem Header="_File">
+                    <MenuItem Header="_New" InputGesture="Ctrl+N" HotKey="Ctrl+N" Command="{Binding NewCommand}" />
+                    <Separator />
                     <MenuItem Header="_Open..." InputGesture="Ctrl+O" HotKey="Ctrl+O" Command="{Binding OpenCommand}" />
+                    <Separator />
                     <MenuItem Header="_Save" InputGesture="Ctrl+S" HotKey="Ctrl+S" Command="{Binding SaveCommand}" />
                     <MenuItem Header="Save _As..." InputGesture="Ctrl+Shift+S" HotKey="Ctrl+Shift+S" Command="{Binding SaveAsCommand}" />
+                    <Separator />
+                    <MenuItem Header="E_xit" />
                 </MenuItem>
             </Menu>
 
