--- a/src/UI/Views/WriteView.axaml
+++ b/src/UI/Views/WriteView.axaml
@@ -33,7 +33,7 @@
         </ItemsControl>
 
         <StackPanel Orientation="Horizontal" Margin="0 10 0 0">
-            <Button>Write to PLC</Button>
+            <Button Command="{Binding WriteCommand}">Write to PLC</Button>
             <Button Command="{Binding CloseCommand}">Cancel</Button>
         </StackPanel>
     </StackPanel>
